# Year3-COMP3211-SE-Group-Project

./: .gitignore  README.md  RequirementsCoverage.md  pyproject.toml  run_tests_with_coverage.py
cli/: __init__.py  main.py
docs/: Design.md  DesignDocument.md  Developer-Manual.md  Honour-Declaration-Template.md  ImplementationPlan.md  Requirements-Coverage.md  RequirementsCoverage.md  SRS.md  Slides.md  User-Manual.md
docs/manuals/: DeveloperManual.md  UserManual.md
model/: __init__.py  board.py  game.py  recorder.py  rules.py  save_load.py  types.py
records/: sample.jungle  sample.record
src/: main.py
src/cli/: renderers.py  shell.py  utils.py
src/model/: __init__.py  board.py  enums.py  game_state.py  move.py  piece.py  position.py  serialization.py
tests/: COVERAGE.md  test_model.py  test_rules.py
tests/coverage/: SUMMARY.txt  contextlib.cover  coverage.txt  enum.cover  model.board.cover  model.game.cover  model.rules.cover  model.types.cover  test_rules.cover  unittest.case.cover  unittest.result.cover  unittest.runner.cover  unittest.suite.cover  unittest.util.cover  warnings.cover  weakref.cover
video/: Recording-Guide.md
